--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,96 @@
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
 annotated-types==0.7.0
 anthropic==0.46.0
 anyio==4.9.0
+attrs==25.3.0
+backoff==2.2.1
 beautifulsoup4==4.13.3
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+cryptography==44.0.2
+dataclasses-json==0.6.7
 distro==1.9.0
+emoji==2.14.1
+eval_type_backport==0.2.2
 fastapi==0.115.11
 filelock==3.13.1
 filetype==1.2.0
+frozenlist==1.5.0
 fsspec==2024.6.1
 ftfy==6.3.1
 google-auth==2.38.0
 google-genai==1.5.0
+greenlet==3.1.1
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.7
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.29.3
 idna==3.10
 Jinja2==3.1.4
 jiter==0.9.0
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.22
+langchain-community==0.3.20
+langchain-core==0.3.49
+langchain-ollama==0.3.0
+langchain-text-splitters==0.3.7
+langdetect==1.0.9
+langsmith==0.3.22
+lxml==5.3.1
 markdown2==2.5.3
 markdownify==0.13.1
 marker-pdf==1.6.1
 MarkupSafe==2.1.5
+marshmallow==3.26.1
 mpmath==1.3.0
+multidict==6.2.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 networkx==3.3
+nltk==3.9.1
 numpy==2.1.2
+olefile==0.47
+ollama==0.4.7
 opencv-python-headless==4.11.0.86
+orjson==3.10.16
 packaging==24.2
 pdftext==0.6.2
 pillow==10.4.0
 platformdirs==4.3.6
+propcache==0.3.1
+psutil==7.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.11.0b2
 pydantic-settings==2.8.1
 pydantic_core==2.32.0
+PyMuPDF==1.25.4
+pypdf==5.4.0
 pypdfium2==4.30.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-iso639==2025.2.18
+python-magic==0.4.27
+python-magic-bin==0.4.14
+python-oxmsg==0.0.2
 PyYAML==6.0.2
 RapidFuzz==3.12.2
 regex==2024.11.6
 requests==2.32.3
+requests-toolbelt==1.0.0
 rsa==4.9
 safetensors==0.5.3
 scikit-learn==1.6.1
@@ -53,9 +98,11 @@ scipy==1.15.2
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.40
 starlette==0.46.1
 surya-ocr==0.13.0
 sympy==1.13.1
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.1
 torch==2.6.0+cu124
@@ -63,9 +110,16 @@ torchaudio==2.6.0+cu124
 torchvision==0.21.0+cu124
 tqdm==4.67.1
 transformers==4.49.0
+typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.12.2
+unstructured==0.17.2
+unstructured-client==0.32.0
 urllib3==2.3.0
 uvicorn==0.34.0
 wcwidth==0.2.13
+webencodings==0.5.1
 websockets==14.2
+wrapt==1.17.2
+yarl==1.18.3
+zstandard==0.23.0
